@@ -1,5 +1,10 @@
 2005-06-09  Davyd Madeley  <davyd@madeley.id.au>
 
+	* battstat_applet.c: If both options are ticked, switch to new
+	  setting for migration.
+
+2005-06-09  Davyd Madeley  <davyd@madeley.id.au>
+
 	* battstat_applet.c:
 	* properties.c:
 	* battstat_applet.glade:
